<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_activity_user_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_gradient"
    tools:context=".ui.user_profile.UserProfileActivity">

    <!--Toolbar-->
...
                app:layout_constraintBottom_toBottomOf="@+id/edit_text_user_profile_email"
                app:layout_constraintStart_toEndOf="@+id/edit_text_user_profile_email"
                app:layout_constraintTop_toTopOf="@+id/edit_text_user_profile_email" />

            <!--Password-->
            <EditText
                android:id="@+id/edit_text_user_profile_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password_24"
                android:ems="10"
                android:enabled="false"
                android:gravity="center"
...
                app:layout_constraintEnd_toEndOf="@+id/edit_text_user_profile_display_name"
                app:layout_constraintStart_toStartOf="@+id/edit_text_user_profile_display_name"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_user_profile_email" />

            <!--Edit user password-->
            <ImageView
                android:id="@+id/image_view_edit_password"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:contentDescription="@string/desc_edit_user_password"
                android:src="@drawable/ic_edit_24"
                app:layout_constraintBottom_toBottomOf="@+id/edit_text_user_profile_password"
                app:layout_constraintStart_toEndOf="@+id/edit_text_user_profile_password"
                app:layout_constraintTop_toTopOf="@+id/edit_text_user_profile_password" />

            <!--Confirm Password-->
            <EditText
                android:id="@+id/edit_text_user_profile_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password_24"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_confirm_password"
...
                app:layout_constraintStart_toStartOf="@+id/edit_text_user_profile_display_name"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_user_profile_password"
                tools:visibility="visible" />

            <!--Update user user_profile button-->
            <Button
                android:id="@+id/button_update_user_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_round"
                android:text="@string/button_update_user_profile"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_user_profile_display_name"
                app:layout_constraintStart_toStartOf="@+id/edit_text_user_profile_display_name"
...
