<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_user_profile"
        android:icon="@drawable/ic_account_24"
        android:title="@string/title_menu_user_profile"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/menu_item_logout"
        android:icon="@drawable/ic_logout_24"
        android:title="@string/title_menu_logout"
        app:showAsAction="withText" />

</menu>